Fix spacing between work thumbnail and title on public collection page

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -721,7 +721,7 @@ table p.name span {
   font-size: 18px;
 }
 
-.collection-works-table {
+.hyc-container, .collection-works-table {
   .media-left {
     margin-right: 1rem;
   }
